tests/snapshots/execution_spec__nesting-level3.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "user": {
          "todos": [
            {
              "completed": false
            },
            {
              "completed": false
            },
            {
              "completed": false
            },
            {
              "completed": true
            },
            {
              "completed": false
            },
            {
              "completed": false
            }
          ]
        }
      }
    }
  }
}
