tests/snapshots/execution_spec__nullable-arg-query.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  users(id: ID): [User]
}

scalar Url

type User {
  id: ID!
  name: String!
}

schema {
  query: Query
}
