tests/snapshots/execution_spec__nullable-arg-query.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query {
  users(id: ID): [User] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users", query: [{key: "id", value: "{{args.id}}"}])
}

type User {
  id: ID!
  name: String!
}
