tests/snapshots/execution_spec__omit-index-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  username: String
}

schema {
  query: Query
}
