tests/snapshots/execution_spec__omit-index-list.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query @addField(name: "username", path: ["username", "0", "name"]) {
  username: [User] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users") @modify(omit: true)
}

type User {
  name: String
}
